feat: forgot password

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 PORT=
+BASE_URL_FRONTEND=
+PORT=
+JWT_SECRET=
+# jwtscrt utk forgot pw
+JWT_SECRET_FORGOT_PASSWORD=
 
+GMAIL_EMAIL=
+GMAIL_APP_PASSWORD=
