--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-PORT=
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL=
+# Direct connection to the database. Used for migrations.
+DIRECT_URL=
+
 BASE_URL_FRONTEND=
 PORT=
 JWT_SECRET=
@@ -8,3 +11,7 @@ JWT_SECRET_FORGOT_PASSWORD=
 
 GMAIL_EMAIL=
 GMAIL_APP_PASSWORD=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
